serving/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fraud-serving
  namespace: staging
spec:
  selector:
    app: fraud-serving
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
